--- a/thirdproject/templates/base.html
+++ b/thirdproject/templates/base.html
@@ -20,13 +20,35 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link active" href="{% url 'home' %}">Home</span></a>
-                    <a class="nav-item nav-link" href="{% url 'new' %}">글쓰기</a>
-                    <a class="nav-item nav-link" href="{% url 'portfolio' %}">Portfolio</a>
-                    <a class="nav-item nav-link" href="#">수료증</a>
-                   
-                </div>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{% url 'home' %}">Blog</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{% url 'portfolio' %}">Portfolio</a>
+                    </li>
+    
+                    {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">환영합니다. {{ user.username }} 님!</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{% url 'new' %}">글쓰기</a>
+                            <a class="dropdown-item" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
+                            <form id="logout" method="POST" action="">
+                                {% csrf_token %} <input type="hidden" />
+                            </form>
+                        </div>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{% url 'signup' %}">Signup</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                    {% endif %}
+                </ul>
             </div>
         </div>
     </nav>
