--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -18,7 +18,8 @@
         </tr>
     </thead>
     <tbody>
-        {% for blog in blogs.all %}
+        {% for blog in posts %}
+
         <tr>
         <td><a href="{% url 'detail' blog.id %}">
                 <h2>{{ blog.title }}</h2>
@@ -34,5 +35,20 @@
         {% endfor %}
     </tbody>
     </table>
+    
+    {%if posts.has_previous%}
+    <a href = "?page=1">First</a>
+    <a href ="?page = {{posts.previous_page_number}}">previous</a>
+    {%endif%}
+
+    <span>{{posts.number}}</span>
+    <span>of</span>
+    <span>{{posts.paginator.num_page}}</span>
+
+    {%if posts.has_next%}
+    <a href="?page={{posts.next_page_number}}">Next</a>
+    <a href="?page={{posts.paginator.num_pages}}">Last</a>
+    {%endif%}
+
 
 {% endblock %}
